Update menu, add class
Remove reference to deleted sections of planning.html, clean up syntax for offline use of website, add class to prevent application of new jQuery on previous class

Former-commit-id: dde3cd12d9862aa8956fdeb8688fc3bb223d3cc8

--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	<header>
-	<a href="http://www.moonwards.com" style="background-color:transparent;">
+	<a href="index.html" style="background-color:transparent;">
 	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	</a>
 	  	<nav>
 	  	<div id="nav">
   		<ul>
-  			<li><a href="http://www.moonwards.com">the VMC</a>
+  			<li><a href="index.html">the VMC</a>
   				<ul>
   					<li><a href="index.html#colony">Colony Phase 1</a>
   					</li>
@@ -67,17 +67,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   					</li>
   				</ul>
   			</li>
-  			<li><a href="http://www.moonwards.com/planning.html">Planning</a>
+  			<li><a href="planning.html">Planning</a>
   				<ul>
-  					<li><a href="planning.html#installations">Installations</a></li>
   					<li><a href="planning.html#equipment">Equipment</a></li>
   					<li><a href="planning.html#structures">Structures</a></li>
   					<li><a href="planning.html#environment">Environment</a></li>
-  					<li><a href="planning.html#model">Mission Planning</a></li>
-  					<li><a href="planning.html#platforms">Platforms</a></li>
   				</ul>
   			</li>
-  			<li><a href="http://www.moonwards.com/about.html">Why</a>
+  			<li><a href="about.html">Why</a>
   				<ul>
   					<li><a href="about.html#plans">Plans Today</a></li>
   					<li><a href="about.html#about">About Us</a></li>
@@ -93,7 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<h2 class="col-4 col-m-5">
 				email: kim@moonwards.com
 				</h2>
-    	<div class="col-8r12 col-m-10 darkYellow pix">
+    	<div class="col-8r12 col-m-10 darkYellow pix-alt">
     				<button style="position: absolute; top: 50px; right: 40px; z-index: 2; font-size: 1.4em; font-weight: 200; 
     					text-align: right; background: transparent; width: 42%; line-height: 1.3em;">
     					"We leave as we came and, God willing, as we shall return, with peace and hope for all mankind."
