Update menu, few minor text edits
Deleted menu entries for deleted parts of planning.html, shortened href addresses to work with the website offline.

Former-commit-id: f35917538c8dcd1eb54720fdc477b287ff9189c4

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  	<nav>
 	  	<div id="nav">
   		<ul>
-  			<li><a href="http://www.moonwards.com">the VMC</a>
+  			<li><a href="index.html">the VMC</a>
   				<ul>
   					<li><a href="index.html#colony">Colony Phase 1</a>
   					</li>
@@ -65,17 +65,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   					</li>
   				</ul>
   			</li>
-  			<li><a href="http://www.moonwards.com/planning.html">Planning</a>
+  			<li><a href="planning.html">Planning</a>
   				<ul>
-  					<li><a href="planning.html#installations">Installations</a></li>
   					<li><a href="planning.html#equipment">Equipment</a></li>
   					<li><a href="planning.html#structures">Structures</a></li>
   					<li><a href="planning.html#environment">Environment</a></li>
-  					<li><a href="planning.html#model">Mission Planning</a></li>
-  					<li><a href="planning.html#platforms">Platforms</a></li>
   				</ul>
   			</li>
-  		  	<li><a href="http://www.moonwards.com/about.html">Why</a>
+  		  	<li><a href="about.html">Why</a>
   				<ul>
   					<li><a href="about.html#plans">Plans Today</a></li>
   					<li><a href="about.html#about">About Us</a></li>
@@ -300,7 +297,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<button class="numbers tooltipR" style="top: 71%; left: 36%;">15
 						<span>
 						<img class="tooltip-img" src="img/lal-lava-tube1.jpg" alt="possible lava tube">
-						Here is an example of the same phenomenon as #9, much closer to Cernan's Promise. 
+						Here is an example of the same phenomenon as #14, much closer to Cernan's Promise. 
 						These are called lava tubes, because they were made as the lava produced by the meteor 
 						impact that created Lalande cooled. Or at least, these mostly look like lava <i>cracks</i>, 
 						but the one on the left could be covering over a tube, perhaps. If so, it is quite long, but 
@@ -592,7 +589,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	 			cooling them. 
 	 			</span>
 	 		</button>
-	 			 	<button class="numbers tooltipBL" style="top: 32%; left: 28%;">14
+	 			 	<button class="numbers tooltipBBL" style="top: 32%; left: 28%;">14
 	 			<span>The furnace tank is a quarter sphere. The focal point of the mirror would be at the center point 
 	 			of the sphere described by the tank's curve. So the light collected falls over most of this outer orange 
 	 			curved tank wall. That distribution makes the intensity easier on the materials and allows more of it to 
@@ -1018,7 +1015,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 				</li>
 		 				<li>
 		 					Winch - The winch can be easily inserted into any of the 4 bases that are sent with it, 
-		 					or it can inserted into a base on the survey rover. 
+		 					or into a base on the survey rover. 
 		 					Those bases are designed to have thick lava poured in and around them. A spot on a boulder 
 		 					is picked, swept clean of particles, the base is placed on it, the lava is poured, and 
 		 					once it hardens the base is set in stone. The first base goes on Gibraltar's western 
@@ -1154,7 +1151,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 				oxygen will gather at the anode while the metals it was formerly bonded to gather 
 		 				at the cathode. The pyrolysis process used in the solar furnace - oxygen creation 
 		 				through very high temperatures - would be preferable as the power is free, being 
-		 				sunlight. But it might be easier to get metals from a electrolysis process.
+		 				sunlight. But it might be easier to get metals from an electrolysis process.
 		 				</li>
 		 				<li>
 		 				Magnetic Separation and Microwave Sintering of Powder Regolith - 
@@ -1621,7 +1618,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         			$(this).css("background-color", "rgba(0, 0, 0, 1)");
         			$(".seeMe").slideUp("fast");
         		});
-        		$("[id*=toSeeA]").on({
+        		$("[id*=toSee]").on({
         			mouseenter: function () {
 						$(this).css("background-color", "rgba(200, 100, 50, 1)");
 						},
