--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/cssportal.tooltip.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="cssportal.tooltip.css">
+<link rel="stylesheet" href="main.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
