--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="normalize.css">
-<link rel="stylesheet" href="cssportal.tooltip.css">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/cssportal.tooltip.css">
+<link rel="stylesheet" href="css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -51,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	<header>
-	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+	<img src="http://moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	  	<nav>
 	  	<div id="nav">
   		<ul>
@@ -114,7 +114,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="darkYellow pix">
 					<button class="numbers tooltipML" style="top: 54%; left: 4%;">7
 							<span>
-								<img class="tooltip-img" src="img/debrisField.jpg" alt="boulders and debris reaching 
+								<img class="tooltip-img" src="http://moonwards.com/img/debrisField.jpg" 
+								alt="boulders and debris reaching 
 								a stone shelf within Lalande">
 							This is a debris field 1.5 km long by 1 km wide, created by material 
 							that slumped down the face of the crater. 
@@ -153,7 +154,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							Some minerals here could be good ore for aluminum production. 
 							</span>
 					</button>
-				<img src="img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
+				<img src="http://moonwards.com/img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
 				</div>
 			</div>
 			<div class="col-4 col-m-4"> 
@@ -193,14 +194,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						It gets a name too. Teacup Crater.
 						</span>
 						</button>
-						<img src="img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
+						<img src="http://moonwards.com/img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
 				</div>
 			</div>
 			<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
 					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
 					<span>
-					<img class="tooltip-img" src="img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
+					<img class="tooltip-img" src="http://moonwards.com/img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
 						This is where one of the highest concentrations of thorium detected on the Moon is. 
 						The map at right by the Lunar Prospector marks hotspots of it in white. Where 
 						there is thorium, there is KREEP - Potassium, 
@@ -682,7 +683,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="rowR">	 
 		<div class="col-11 col-m-11">
 			<div class="darkYellow pix">
-				<img src="img/GibE1400.jpg" alt="overview of first structures">
+				<img src="img/MIP-B.jpg" alt="overview of first structures">
 				<button class="numbers tooltipTML" style="top: 25%; left: 50%;">20
 	 			<span>
 	 				The MIPs are powered by sapphire Fresnel lenses. The lane between the raised rails is the 
@@ -895,7 +896,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 		<b class="yellow">Mission 1:</b> &nbsp; One Falcon Heavy.&nbsp; <b>Purpose</b>: Survey area, 
 		 		conduct experiments to establish construction methodologies, test prototype 
 		 		technology, assess solar furnace prototype.
-		 		&nbsp; <b>Duration</b>: 1 to 2 years
 		 	</p>
 		 	<p class="black">
 		 		<b>Equipment list</b> with approximate mass budget, assumed payload 7.5 metric tons (7.5 t). 
@@ -1203,7 +1203,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 		and use it to begin production of 
 		 		oxygen and oxides of phosphorus, sodium, potassium, and sulphur, begin basalt fiber and cord 
 		 		production, start local parts production. <br>
-		 		<b>Duration</b>: 1 to 2 years<br>
 		 	</p>
 		 	<p class="black">
 		 		<b>Lalande Equipment list</b> with approximate mass budget, assumed payload 7.5 t 
@@ -1349,7 +1348,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 		and methanol) from surface regolith. Separate and distil volatiles. Electrolyse water into oxygen 
 		 		and hydrogen. Chill to cryogenic temperatures and store. Refill fuel tanks of lander (the shuttle) 
 		 		and load it with water and volatiles. Fly to Cernan's Promise. Repeat. 
-		 		&nbsp; <b>Duration</b>: 2 to 3 years
 		 		<b>South Pole Equipment list</b> with approximate mass budget, assumed payload 18 t <br>
 		 		This lander is reusable - it is a shuttle. 2 t has been subtracted from its payload to allot 
 		 		mass for making it reliably reusable. 
