img and css addresses for GitHub page
Changed addresses to work for GitHub page - add "http://moonwards.com/" to img src name, remove "css/" in stylesheet links in head.

Former-commit-id: f8888dfc0249bc257ca6a7e5a8b841a06c61d48a [formerly 0684b4820d7470bc86d469e1560629b80bb0eff7]
Former-commit-id: ea55e769b8164defe827c83bb34d31ad1e2c1bc1

--- a/planning.html
+++ b/planning.html
@@ -23,10 +23,10 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/cssportal.tooltip.css">
-<link rel="stylesheet" href="css/accordian.css">
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="cssportal.tooltip.css">
+<link rel="stylesheet" href="accordian.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
 
@@ -67,7 +67,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <![endif]-->
 	<header>
 	<a href="http://www.moonwards.com" style="background-color:transparent;">
-	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+	<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	</a>
 	  	<nav>
 	  	<div id="nav">
@@ -228,7 +228,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 	 			advantage.
 		 	 			</span>
 		 	 		</button>
-					<img src="img/MIP-A.png" alt="layout">
+					<img src="http://www.moonwards.com/img/MIP-A.png" alt="layout">
 				</div>
 				<div id="mipdivB" class="pix">
 					<button class="numbers1">Features</button>
@@ -256,7 +256,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 	 			</span>
 		 	 		</button>
 		 	 		
-					<img src="img/MIP-B.jpg" alt="layout">
+					<img src="http://www.moonwards.com/img/MIP-B.jpg" alt="layout">
 				</div>
 				<div id="mipdivC" class="pix">
 		 	 		<button class="numbers1">Features</button>
@@ -284,7 +284,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 	 			application. Perhaps it will be dropped.
 		 	 			</span>
 		 	 		</button>
-		 			<img src="img/MIPs.jpg" alt="Melt-in-Place Station details">
+		 			<img src="http://www.moonwards.com/img/MIPs.jpg" alt="Melt-in-Place Station details">
 		 		</div>
 	 		</div>
 	 	<div class="col-2 col-m-2 accordian darkYellow roundLeft">
