oops, meant to change gh-pages branch
Former-commit-id: dbd66a3b0c53634f921079b56463caf718ff840f

--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="cssportal.tooltip.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/cssportal.tooltip.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -52,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <![endif]-->
 	<header>
 	<a href="index.html" style="background-color:transparent;">
-	<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	</a>
 	  	<nav>
 	  	<div id="nav">
@@ -67,17 +67,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   					</li>
   				</ul>
   			</li>
-  			<li><a href="planning.html">Plan</a>
+  			<li><a href="planning.html">Planning</a>
   				<ul>
   					<li><a href="planning.html#equipment">Equipment</a></li>
   					<li><a href="planning.html#structures">Structures</a></li>
   					<li><a href="planning.html#environment">Environment</a></li>
   				</ul>
   			</li>
-  			<li><a href="learn.html">Learn</a>
-  				<ul>
-  					<li><a href="learn.html#calculators">Calculators</li>
-  				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
   					<li><a href="about.html#plans">Plans Today</a></li>
@@ -101,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     					<br><span style="font-size: 0.7em; line-height: 0.1em;">Gene Cernan, as he stepped off the Moon, 
     						Apollo 17, Dec. 19, 1972</span>
     				</button>
-    				<img src="http://www.moonwards.com/img/Apollo14LEM-crop.jpg" alt="Apollo 14 Lunar Module above the Moon, with Lalande Crater below">
+    				<img src="img/Apollo14LEM-crop.jpg" alt="Apollo 14 Lunar Module above the Moon, with Lalande Crater below">
 				<p>
 				Deep change comes from new experiences. New places bring new perspectives. Space is the ultimate place for both, 
 				and there is no place in space like the Moon. It can change everything, and it will, once we understand that and 
@@ -142,7 +138,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="rowR">
 			<div class="col-10r12 col-m-12">
 			<div class="darkYellow" id="plans">
-			<img src="http://www.moonwards.com/img/ILD-CGER-website.png" alt="A chart of all planned space exploration in the next 25 years">
+			<img src="img/ILD-CGER-website.png" alt="A chart of all planned space exploration in the next 25 years">
 			<p>
 			The graphic above shows all the missions planned by all space agencies and private enterprise to 2033. 
 			(I will be trying to keep it up to date, if i've missed something drop me a note or mention it in the forum.) 
