Added files via upload
Former-commit-id: f120dcff2dde3d629f8c5c989438a39f6e93fa50 [formerly e0d40b916d6c54b41839ed31d20e622f00c880f5]
Former-commit-id: a9ef14fa33ebcd956cb1d851a1c81486dd61019e

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/cssportal.tooltip.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="cssportal.tooltip.css">
+<link rel="stylesheet" href="main.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -51,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	<header>
-	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+	<img src="http://moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	  	<nav>
 	  	<div id="nav">
   		<ul>
@@ -72,6 +72,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   					<li><a href="planning.html#environment">Environment</a></li>
   				</ul>
   			</li>
+  			<li><a href="learn.html">Learn</a>
+  				<ul>
+  					<li><a href="learn.html#calculators">Calculators</li>
+  				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
   					<li><a href="about.html#plans">Plans Today</a></li>
@@ -114,7 +118,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="darkYellow pix">
 					<button class="numbers tooltipML" style="top: 54%; left: 4%;">7
 							<span>
-								<img class="tooltip-img" src="img/debrisField.jpg" 
+								<img class="tooltip-img" src="http://moonwards.com/img/debrisField.jpg" 
 								alt="boulders and debris reaching 
 								a stone shelf within Lalande">
 							This is a debris field 1.5 km long by 1 km wide, created by material 
@@ -154,7 +158,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							Some minerals here could be good ore for aluminum production. 
 							</span>
 					</button>
-				<img src="img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
+				<img src="http://moonwards.com/img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
 				</div>
 			</div>
 			<div class="col-4 col-m-4"> 
@@ -194,14 +198,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						It gets a name too. Teacup Crater.
 						</span>
 						</button>
-						<img src="img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
+						<img src="http://moonwards.com/img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
 				</div>
 			</div>
 			<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
 					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
 					<span>
-					<img class="tooltip-img" src="img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
+					<img class="tooltip-img" src="http://moonwards.com/img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
 						This is where one of the highest concentrations of thorium detected on the Moon is. 
 						The map at right by the Lunar Prospector marks hotspots of it in white. Where 
 						there is thorium, there is KREEP - Potassium, 
@@ -232,7 +236,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					of launch easily, though.)
 					</span>
 					</button>
-				<img src="img/LalandeRegion.svg" alt="Lalande Crater overview">
+				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
 			 	</div>
 			</div>
 	</div>
@@ -262,7 +266,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</button>
 					<button class="numbers tooltipML" style="top: 55.5%; left: 72.5%;">12
 						<span>
-							<img class="tooltip-img" style="float: left;" src="img/Teacup250.jpg">
+							<img class="tooltip-img" style="float: left;" src="http://moonwards.com/img/Teacup250.jpg">
 						And here's Teacup Crater. To its right you can faintly see a line where the raised ground by the 
 						crater rim stops, and flatter ground begins. Hopefully that would be an adequate landing spot. 
 						The image here shows it has a very soft rim and no floor, the incline of its sides just meet. 
@@ -284,7 +288,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</button>
 					<button class="numbers tooltipMR" style="top: 52%; left: 4%;">14
 						<span>
-						<img class="tooltip-img" src="img/lalande-skylight-3frame.jpg" 
+						<img class="tooltip-img" src="http://moonwards.com/img/lalande-skylight-3frame.jpg" 
 						alt="3 views of lalande skylight">
 						There is a skylight in this area. The three images show it in the mid-afternoon, morning, and at 
 						midday. It is about 10 m by 20 m wide, and based on the sun angle when the left shot was taken, 
@@ -298,7 +302,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</button>
 					<button class="numbers tooltipR" style="top: 71%; left: 36%;">15
 						<span>
-						<img class="tooltip-img" src="img/lal-lava-tube1.jpg" alt="possible lava tube">
+						<img class="tooltip-img" src="http://moonwards.com/img/lal-lava-tube1.jpg" alt="possible lava tube">
 						Here is an example of the same phenomenon as #14, much closer to Cernan's Promise. 
 						These are called lava tubes, because they were made as the lava produced by the meteor 
 						impact that created Lalande cooled. Or at least, these mostly look like lava <i>cracks</i>, 
@@ -313,7 +317,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</button>
 					<button class="numbers tooltipR" style="top: 50%; left: 39%;">16
 						<span>
-						<img class="tooltip-img" src="img/lal-lava-tube2.jpg">
+						<img class="tooltip-img" src="http://moonwards.com/img/lal-lava-tube2.jpg">
 						These fissures go all the way from the base of the crater wall to the hill to the left 
 						of the marker, about 2 km. Again, there are many examples like this around the crater 
 						floor, and many long depressions that are wider but without cracks or fissures. 
@@ -332,12 +336,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						is thicker. What if some of that later drained away? That would leave a hollow dome. 
 						Wouldn't that be nice? Each one of these is 200 m across. What if, just maybe, the domes 
 						were created by bubbles of gas? 
-						<img class="tooltip-img" src="img/lal-domes.jpg">
+						<img class="tooltip-img" src="http://moonwards.com/img/lal-domes.jpg">
 						</span>
 					</button>
 					<button class="numbers tooltipR" style="top: 58%; left: 21%;">18
 						<span>
-						<img class="tooltip-img" src="img/lal-dark-material.jpg">
+						<img class="tooltip-img" src="http://moonwards.com/img/lal-dark-material.jpg">
 						These hills, which mark the central upwelling that occurs in craters of this size as the 
 						ground rebounds after their creation impacts, have a lot of boulders on top of them 
 						much darker than surrounding material. In this shot at midday the contrast is stark, it is less 
@@ -351,7 +355,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</button>
 					<button class="numbers tooltipTR" style="top: 62%; left: 18%;">19
 						<span>
-						<img class="tooltip-img" src="img/blackLalande.jpg" alt="black material in Lalande crater">
+						<img class="tooltip-img" src="http://moonwards.com/img/blackLalande.jpg" alt="black material in Lalande crater">
 						Okay, there is one very tantalizing possible explanation, though it is very 
 						preliminary. If the asteroid that impacted here and created Lalande was moving slowly enough, 
 						much of its material may have remained here, instead of vaporizing and being distributed all 
@@ -364,7 +368,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						</span>
 						</button>
 					
-					<img src="img/Apollo16view1200.jpg" alt="view from south of Lalande taken by Apollo 16">
+					<img src="http://moonwards.com/img/Apollo16view1200.jpg" alt="view from south of Lalande taken by Apollo 16">
 				</div>
 		</div>
 	</div>
@@ -389,7 +393,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	 <div class="rowR">	 
 			<div class="col-11 col-m-11">
 				<div class="darkYellow pix">
-			<img src="img/GibA1300.jpg" alt="overview of first structures">
+			<img src="http://moonwards.com/img/GibA1300.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBML" style="top: 65%; left: 60%;">1
 						<span>
 						This is close to what this part of the Moon actually 
@@ -455,7 +459,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	 <div class="rowR">	 
 			<div class="col-11 col-m-11">
 				<div class="darkYellow pix">
-			<img src="img/GibB1400.jpg" alt="overview of first structures">
+			<img src="http://moonwards.com/img/GibB1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipMR" style="top: 20%; left: 49%;">5
 						<span>
 							This shows the base late in Mission 2. Not yet modelled: the heavy rover that 
@@ -568,7 +572,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	 <div class="rowR">	 
 			<div class="col-11 col-m-11">
 				<div class="darkYellow pix">
-			<img src="img/GibF1400.jpg" alt="overview of first structures">
+			<img src="http://moonwards.com/img/GibF1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBR" style="top: 45%; left: 9%;">12
 	 			<span>
 	 			Here are all the struts that 
@@ -684,7 +688,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="rowR">	 
 		<div class="col-11 col-m-11">
 			<div class="darkYellow pix">
-				<img src="img/MIP-B.jpg" alt="overview of first structures">
+				<img src="http://moonwards.com/img/MIP-B.jpg" alt="overview of first structures">
 				<button class="numbers tooltipTML" style="top: 25%; left: 50%;">20
 	 			<span>
 	 				The MIPs are powered by sapphire Fresnel lenses. The lane between the raised rails is the 
@@ -756,7 +760,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="rowR">	 
 			<div class="col-11 col-m-11">
 				<div class="darkYellow pix">
-			<img src="img/GibD1400.jpg" alt="overview of first structures">
+			<img src="http://moonwards.com/img/GibD1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBMR" style="top: 11%; left: 52%;">24
 	 			<span>
 	 			This support tower has radiator panels extending from it 
