--- a/calculators.html
+++ b/calculators.html
@@ -34,9 +34,9 @@
     Latitude <input type="text" placeholder="(degrees)" value="" id="destinationlatitudeSH">
     Longitude <input type="text" placeholder="(degrees)" value="" id="destinationlongitudeSH"><br>
     <div>
-      <img src="img/mapmini.gif" width="256" height="128">
-      <img src="img/icon.png" class="icons" id="initialicon" width="9" height="9">
-      <img src="img/icon.png" class="icons" id="destinationicon" width="9" height="9">
+      <img src="mapmini.gif" width="256" height="128">
+      <img src="icon.png" class="icons" id="initialicon" width="9" height="9">
+      <img src="icon.png" class="icons" id="destinationicon" width="9" height="9">
     </div>
     <br><br>
     <button onclick="subhop()">Calculate!</button>
