--- a/about.html
+++ b/about.html
@@ -67,13 +67,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   					</li>
   				</ul>
   			</li>
-  			<li><a href="planning.html">Planning</a>
+  			<li><a href="planning.html">Plan</a>
   				<ul>
   					<li><a href="planning.html#equipment">Equipment</a></li>
   					<li><a href="planning.html#structures">Structures</a></li>
   					<li><a href="planning.html#environment">Environment</a></li>
   				</ul>
   			</li>
+  			<li><a href="learn.html">Learn</a>
+  				<ul>
+  					<li><a href="learn.html#calculators">Calculators</li>
+  				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
   					<li><a href="about.html#plans">Plans Today</a></li>
