--- a/learn.html
+++ b/learn.html
@@ -101,7 +101,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<h2 class="col-4 col-m-5">
 				Calculators
 				</h2>
-  <div>
+  <div class="roundAll">
     <h3>The Rocket Equation</h3>
     <p>Mass ratio:</p>
     <input type="text" placeholder="Start mass divided by end mass" value="" id="massratioRE">
@@ -112,7 +112,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <button onclick="rocket()">Calculate!</button>
     <p id="resultRE">.</p>
   </div>
-  <div>
+  <div class="roundAll">
     <h3>Suborbital Hop</h3>
     <p>Initial location:</p>
     Latitude <input type="text" placeholder="(degrees)" value="" id="latitudeSH">
