--- a/learn.html
+++ b/learn.html
@@ -104,15 +104,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="sigStuff" class="black">
   <div class="rowR">
   <div class="roundAll">
-    <h3>The Rocket Equation</h3>
-    <p>Mass ratio:</p>
-    <input type="text" placeholder="Start mass divided by end mass" value="" id="massratioRE">
-    <p>Exhaust velocity: (m/s)</p>
-    <input type="text" placeholder="Velocity of the rocket exhaust" value="" id="exhaustvelocityRE">
-    <input type="checkbox" id="ispcheckboxRE">use Isp instead
-    <br><br>
-    <button onclick="rocket()">Calculate!</button>
-    <p id="resultRE">.</p>
+    <div class="darkYellow pix">
+      <h3>The Rocket Equation</h3>
+      <p>Mass ratio:</p>
+      <input type="text" placeholder="Start mass divided by end mass" value="" id="massratioRE">
+      <p>Exhaust velocity: (m/s)</p>
+      <input type="text" placeholder="Velocity of the rocket exhaust" value="" id="exhaustvelocityRE">
+      <input type="checkbox" id="ispcheckboxRE">use Isp instead
+      <br><br>
+      <button onclick="rocket()">Calculate!</button>
+      <p id="resultRE">.</p>
+    </div>
   </div>
   <div class="roundAll">
     <h3>Suborbital Hop</h3>
