--- a/learn.html
+++ b/learn.html
@@ -111,7 +111,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <br><br>
                     <button onclick="rocket()">Calculate!</button>
                     <p id="resultRE">.</p>
-                </div><br>
+                </div><br><br><br>
                 <div class="darkYellow pix">
                     <h3>Suborbital Hop</h3><br>
                     <p>Initial location:</p>
