--- a/learn.html
+++ b/learn.html
@@ -98,9 +98,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</header>
 <div id="container">
     <div class="rowR" id="calculators">
-        <h2 class="col-4 col-m-5">Calculators</h2>
+        <h2 class="col-4 col-m-5">Calculators</h2><br>
         <div id="sigStuff" class="black">
-            <div class="rowR">
+            <div class="rowL">
                 <div class="darkYellow pix">
                     <h3>The Rocket Equation</h3><br>
                     <p>Mass ratio:</p>
