--- a/learn.html
+++ b/learn.html
@@ -99,8 +99,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="container">
     <div class="rowR" id="calculators">
         <h2 class="col-4 col-m-5">Calculators</h2><br>
-        <div id="sigStuff" class="black">
-            <div class="rowL">
+        <div class="rowl">
+            <div class="black">
                 <div class="darkYellow pix">
                     <h3>The Rocket Equation</h3><br>
                     <p>Mass ratio:</p>
@@ -111,7 +111,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <br><br>
                     <button onclick="rocket()">Calculate!</button><br>
                     <p id="resultRE">.</p>
-                </div><br><br><br>
+                </div>
+             </div>
+             <div class="black">
                 <div class="darkYellow pix">
                     <h3>Suborbital Hop</h3><br>
                     <p>Initial location:</p>
