--- a/learn.html
+++ b/learn.html
@@ -125,8 +125,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     Longitude <input type="text" placeholder="(degrees)" value="" id="destinationlongitudeSH"><br>
                     <div>
                         <img src="mapmini.gif" width="256" height="128">
-                        <img src="icon.png" class="icons" id="initialicon" width="9" height="9">
-                        <img src="icon.png" class="icons" id="destinationicon" width="9" height="9">
+                        <img src="icon.png" id="initialicon" width="9" height="9">
+                        <img src="icon.png" id="destinationicon" width="9" height="9">
                     </div>
                     <br><br>
                     <button onclick="subhop()">Calculate!</button><br>
