--- a/learn.html
+++ b/learn.html
@@ -98,8 +98,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</header>
 <div id="container">
     <div class="rowR" id="calculators">
-        <h2 class="col-4 col-m-5">Calculators</h2><br>
-        <div class="rowl">
+        <div class="rowL">
+            <h2 class="col-4 col-m-5">Calculators</h2><br>
             <div class="black">
                 <div class="darkYellow pix">
                     <h3>The Rocket Equation</h3><br>
