--- a/learn.html
+++ b/learn.html
@@ -101,7 +101,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="rowL">
             <h2 class="col-4 col-m-5">Calculators</h2><br>
             <div class="black">
-                <div>
+                <div class="black">
                     <div class="darkYellow pix">
                         <h3>The Rocket Equation</h3><br>
                         <p>Mass ratio:</p>
@@ -115,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </div>
                 <br>
-                <div>
+                <div class="black">
                     <div class="darkYellow pix">
                         <h3>Suborbital Hop</h3><br>
                         <p>Initial location:</p>
