--- a/learn.html
+++ b/learn.html
@@ -100,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="rowR" id="calculators">
         <div class="rowL">
             <h2 class="col-4 col-m-5">Calculators</h2><br>
-            <div class="black">
+            <div class="black col-9 col-m-8">
                 <div class="black">
                     <div class="darkYellow pix">
                         <h3>The Rocket Equation</h3><br>
