--- a/learn.html
+++ b/learn.html
@@ -46,14 +46,56 @@ rel='stylesheet' type='text/css'>
     </head>
     <body>
     <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TN8NFC"<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':<!-- 'End Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TN8NFC"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN8NFC');</script>
+<!-- 'End Google Tag Manager -->
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
             Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	<header>
-	<a href="index.html" style="background-color:transparent;">	  	<nav>
-	  	<div id="nav">  	</nav>
+	<a href="index.html" style="background-color:transparent;">
+	<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+	</a>
+	  	<nav>
+	  	<div id="nav">
+  		<ul>
+  			<li><a href="index.html">the VMC</a>
+  				<ul>
+  					<li><a href="index.html#colony">Colony Phase 1</a>
+  					</li>
+  					<li><a href="index.html#mission1">Mission 1</a>
+  					</li>
+  					<li><a href="index.html#mission2">Mission 2</a>
+  					</li>
+  				</ul>
+  			</li>
+  			<li><a href="planning.html">Plan</a>
+  				<ul>
+  					<li><a href="planning.html#equipment">Equipment</a></li>
+  					<li><a href="planning.html#structures">Structures</a></li>
+  					<li><a href="planning.html#environment">Environment</a></li>
+  				</ul>
+  			</li>
+  			<li><a href="learn.html">Learn</a>
+  				<ul>
+  					<li><a href="learn.html#calculators">Calculators</a></li>
+  				</ul>
+  			<li><a href="about.html">Why</a>
+  				<ul>
+  					<li><a href="about.html#plans">Plans Today</a></li>
+  					<li><a href="about.html#about">About Us</a></li>
+  				</ul>
+  			</li>
+  			<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+  		</ul>
+  		</div>
+  	</nav>
 	</header>
 <div id="container">
     <div class="rowR" id="calculators">
